# imu-viz

./: .gitignore  README.md  pyproject.toml  serial_read.py  test_MTi_walk_3.xlsx  viz.py
